# covid-da-project

./: .gitignore  COVID_data_cleanning.html  COVID_data_cleanning.ipynb  README.md  TITANIC.html  TITANIC.ipynb  hello.py  pyproject.toml  requirements.txt
COVID/scripts/: limpieza.py
assets/Entendimiento/: 3correlacion.py
assets/Preparacion/: 1estimar.py  2imputar.py
